src/test/deca/context/invalid/ContextSansObjet/Identification/floatNullAssign.deca
//Description
//  Assignation d'une variable float avec null
//
//Réponse
//  Erreur contextuelle ligne 10
//  type incompatible

{
    float x;
    x = null;
}